<resources>
    <string name="app_name">My Application</string>
    <string name="app_secondName">Second Activity</string>
    <string name="action_settings">Settings</string>

    <string name="strFirst">첫 번째 숫자</string>
    <string name="strSecond">두 번째 숫자</string>
    <string name="strPlus">더하기</string>
    <string name="strMinus">빼기</string>
    <string name="strMul">곱하기</string>
    <string name="strDiv">나누기</string>
    <string name="strCalc">계산하기</string>
    <string name="strReturn">돌아가기</string>
</resources>
