<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/first"
        android:hint="@string/strFirst"
        android:layout_weight="0.07"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/second"
        android:hint="@string/strSecond"
        android:layout_weight="0.07"/>

    <RadioGroup
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcGroup">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:id="@+id/plus"
            android:text="@string/strPlus"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:id="@+id/minus"
            android:text="@string/strMinus"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:id="@+id/multiply"
            android:text="@string/strMul"/>

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:textSize="12dp"
            android:id="@+id/divider"
            android:text="@string/strDiv"/>
    </RadioGroup>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/calc"
        android:text="@string/strCalc"/>
</LinearLayout>
